status-app/src/components/UserList.css
.user-list {
  display: flex;
  flex-direction: column;
  align-items: center; /* Center the list horizontally */
  justify-content: center; /* Center the list vertically */
  height: 100%; /* Ensure the list takes the full height of the container */
}

.update-now-button {
  background-color: #007bff;
  color: white;
  border: none;
  padding: 10px;
  margin-bottom: 20px; /* Add margin to create space between the button and the list */
  cursor: pointer;
  font-size: 16px;
  border-radius: 5px;
}

.update-now-button:hover {
  background-color: #0056b3;
}

.user {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 200px;
  padding: 4px 8px; /* Reduce padding */
  background: white;
  border-radius: 8px;
  box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
  margin-bottom: 10px;
  font-size: 12px; /* Reduce font size */
  height: 24px; /* Reduce height */
  line-height: 20px; /* Adjust line height */
}

.name {
  font-weight: bold;
  margin-right: 8px;
}

.status {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  border: 2px solid black;
}

.absent { background-color: red; }
.lead { background-color: rgb(225, 0, 255); }
.busy { background-color: yellow; }
.available { background-color: green; }

.status.available {
  background-color: #4caf50;
}

.status.lead {
  background-color: #cc00ff;
}

.status.absent {
  background-color: #ff4d4d;
}

.status.busy {
  background-color: #ffcc00;
}

